# scoob-graph

./: README.md
backend/: pyproject.toml  scoob-backend.py
cypher/: Create_C.txt  Create_I.txt  Create_S.txt  Create_V.txt  Import_I.cypher  Import_S.cypher  Import_V.cypher  Rel_C.txt  Rel_S.txt  Rel_V.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: AppearancesScatter.vue  BarChart.vue  CaughtBar.vue  MotiveDonut.vue  StatusPolar.vue  TotalsBar.vue  TropeRadar.vue  UnmaskedBar.vue  VillainTypePie.vue
